# Rize-1

./: Cargo.toml  DesignDoc.md  README.md  StyleGuide.md  rustfmt.toml
azzembly/: ScreenTest.azm  test.azm
programs/: ScreenTest.azm
src/: components.rs  constants.rs  main.rs  systems.rs  types.rs
src/azzembly/: test.azm
src/display/: mod.rs
src/interpreter/: mod.rs  systems.rs  types.rs
src/interpreter/collection/: azm.rs  mod.rs  opcode_fn.rs  tests.rs
src/interpreter/display/: mod.rs
src/types/: defs.rs  impls.rs  mod.rs
src/ui/: components.rs  mod.rs  systems.rs  types.rs
